@@ -650,12 +650,11 @@ typedef enum
 
   GDK_IC_PREEDIT_AREA_REQ	= GDK_IC_PREEDIT_AREA | 
 				  GDK_IC_PREEDIT_FONTSET,
-  GDK_IC_PREEDIT_POSITION_REQ	= GDK_IC_PREEDIT_AREA | 
-    				  GDK_IC_SPOT_LOCATION |
+  GDK_IC_PREEDIT_POSITION_REQ	= GDK_IC_PREEDIT_AREA | GDK_IC_SPOT_LOCATION |
 				  GDK_IC_PREEDIT_FONTSET,
 
   GDK_IC_STATUS_AREA_REQ	= GDK_IC_STATUS_AREA | 
-				  GDK_IC_STATUS_FONTSET,
+				  GDK_IC_STATUS_FONTSET
 } GdkICAttributesType;
 
 /* The next two enumeration values current match the
